--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,24 +13,23 @@ test_script:
         echo
         echo
   - sh: dotnet tool list -g
-  - sh: |
-        if [[ $(dotnet tool list -g) != *"cake.tool"* ]]; then
-          dotnet tool install -g Cake.Tool
-        fi
-  - ls -ltra ~/.dotnet/tools/
-  - sh: |
-      mkdir -p ~/.nuget/NuGet
-      echo '<?xml version="1.0" encoding="utf-8"?>
-      <configuration>
-      <packageSources>
-      <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-      </packageSources>
-      </configuration>' > ~/.nuget/NuGet/NuGet.Config
-  - sh: dotnet tool list -g
-  - sh: |
-        if [[ $(dotnet tool list -g) != *"cake.tool"* ]]; then
-          dotnet tool install -g Cake.Tool
-        fi
-  - ls -ltra ~/.dotnet/tools/
+#   - sh: |
+#         if [[ $(dotnet tool list -g) != *"cake.tool"* ]]; then
+#           dotnet tool install -g Cake.Tool
+#         fi
+#   - ls -ltra ~/.dotnet/tools/
+#   - sh: |
+#       mkdir -p ~/.nuget/NuGet
+#       echo '<?xml version="1.0" encoding="utf-8"?>
+#       <configuration>
+#       <packageSources>
+#       <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+#       </packageSources>
+#       </configuration>' > ~/.nuget/NuGet/NuGet.Config
+   - sh: dotnet nuget list source --format Detailed
+#   - sh: |
+#         if [[ $(dotnet tool list -g) != *"cake.tool"* ]]; then
+#           dotnet tool install -g Cake.Tool
+#         fi
   
 build: off
